尝试首页的编辑

--- a/fglai/.project
+++ b/fglai/.project
@@ -18,6 +18,7 @@
 	</buildSpec>
 	<natures>
 		<nature>com.pandora.projects.ui.MKeyNature</nature>
+		<nature>com.aptana.projects.webnature</nature>
 	</natures>
 	<filteredResources>
 		<filter>
